# MeganJohns

client/: index.html  package-lock.json  package.json  tsconfig.json
client/src/: Api.tsx  App.css  App.tsx  MjSection.tsx  index.css
client/src/About/: Homepage.tsx
client/src/ArtworkSection/: ArtworkCard.tsx  ArtworkModal.tsx  ArtworkSection.tsx
client/src/Discography/: AlbumCard.tsx  AlbumModal.tsx  Discography.tsx
client/src/Header/: Header.css  Header.tsx  NavList.tsx  Title.tsx
client/src/Header/SocialBanner/: SocialBanner.css  SocialBanner.tsx
client/src/Homepage/: BioComp.tsx  BioP.tsx  Homepage.tsx
client/src/MjCarousel/: MjCard.tsx  MjCarousel.tsx
client/src/Quotes/: Quotes.tsx
client/src/Videos/: VideoModal.css  VideoModal.tsx  Videos.css  Videos.tsx
client/src/types/: Album.tsx  Artwork.tsx  Bio.tsx  MeganJohns.tsx  Quote.tsx  Video.tsx
server/: .gitignore  pyproject.toml
server/app/: main.py  origins.py
server/app/constants/: __init__.py
server/app/controllers/: controller.py
server/app/models/: albums.py  articles.py  artwork.py  bio.py  meganjohns.py  quotes.py  video.py
server/app/queries/: albums.py  articles.py  artwork.py  base.py  bio.py  quotes.py  videos.py
server/app/routers/: albums.py  artwork.py  bio.py  quotes.py  videos.py
server/app/scripts/: seed.py
